--- a/css/styles.css
+++ b/css/styles.css
@@ -14,15 +14,6 @@
 .block_for_messages{
     text-align: center;
 }
-
-#header, #footer{
-    border: 2px solid #000;
-}
-
-#header{
-    padding-left: 10px;
-}
-
 #footer{
     position: absolute;
     bottom: 0;
@@ -36,23 +27,20 @@
 }
 
 #auth_block{
-    width: 290px;
     float: right;
 }
 
 #auth_block a{
     display: block;
-    padding: 10px;
-    border-radius: 10px;
+
     color: #fff;
-    width: 110px;
-    height: 30px;
+
     text-decoration: none;
 }
-
+/*
 #auth_block a:hover{
     text-decoration: underline;
-}
+}*/
 
 #link_register{
     float: left;
