--- a/css/create_edit_request_style.css
+++ b/css/create_edit_request_style.css
@@ -45,7 +45,7 @@
     box-shadow: inset 0 1px #FFF, inset -1px -1px #F7FAFB, inset 1px 0 #F7FAFB;
     font-size: 11px;
 }
-#form_request .sub button {
+#form_request .sub input {
 
 
     left: 50%;
@@ -71,7 +71,7 @@
     text-shadow: 0 -1px rgba(0,0,0,0.15);
     outline: none;
 }
-#form_request .sub button::-moz-focus-inner{border:0}
+#form_request .sub input::-moz-focus-inner{border:0}
 textarea {
     height:213px;
 }
