--- a/css/styles.css
+++ b/css/styles.css
@@ -103,4 +103,42 @@ tr {cursor:pointer}
 .spoiler_links {cursor:pointer;}
 
 
+.spoiler_links {
+    display: inline-block;
+    border-radius: 4px;
+    background-color: #4caf50;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 18px;
+    padding: 20px;
+    width: 100px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+}
 
+.spoiler_links span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+}
+
+.spoiler_links span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+}
+
+.spoiler_links:hover span {
+    padding-right: 25px;
+}
+
+.spoiler_links:hover span:after {
+    opacity: 1;
+    right: 0;
+}
