--- a/css/comments_style.css
+++ b/css/comments_style.css
@@ -1,5 +1,5 @@
-#form_request {
-    width: 500px;
+#form_comment {
+    width: 1024px;
     padding: 24px 24px 0;
     margin: 25px auto 0;
     background: #FEFEFE;
@@ -9,26 +9,26 @@
     font: 14px/18px Arial, Tahoma, sans-serif;
     color: #444;
 }
-#form_request .MainHeaderLabel {
+#form_comment .MainHeaderLabel {
     margin: 0 0 10px;
     font: 18px Arial, Tahoma, sans-serif;
 
 }
-#form_request .HeadersLabel {
+#form_comment .HeadersLabel {
     margin: 25px 25px 100px;
     font: 15px Arial, Tahoma, sans-serif;
 }
-#form_request .pole {
+#form_comment .pole {
     margin: 0 0 18px;
 }
-#form_request .pole label {
+#form_comment .pole label {
      display: block;
      margin: 0 0 11px;
  }
-#form_request .pole .input {
+#form_comment .pole .input {
     border-radius: 4px;
 }
-#form_request .pole input,textarea,select {
+#form_comment .pole input,textarea,select {
     font: 12px Arial, Tahoma, sans-serif;
     color: #444;
     width: 450px;
@@ -38,11 +38,11 @@
     box-shadow: inset 2px 2px 6px #EBEBEB, 0 0 0 5px #F7F9FA;
     outline: none;
 }
-#form_request .pole input:focus {
+#form_comment .pole input:focus {
     border-color: #B7D4EA;
     box-shadow: inset 2px 2px 6px #EBEBEB, 0 0 4px #D0E6F6, 0 0 0 5px #F2F8FC;
 }
-#form_request .sub {
+#form_comment .sub {
     margin: 0 auto;
     text-align: center;
     overflow: hidden;
@@ -54,7 +54,7 @@
     box-shadow: inset 0 1px #FFF, inset -1px -1px #F7FAFB, inset 1px 0 #F7FAFB;
     font-size: 11px;
 }
-#form_request .sub input {
+#form_comment .sub input {
 
 
     left: 50%;
@@ -80,17 +80,7 @@
     text-shadow: 0 -1px rgba(0,0,0,0.15);
     outline: none;
 }
-#form_request .sub input::-moz-focus-inner{border:0}
+#form_comment .sub input::-moz-focus-inner{border:0}
 textarea {
     height:213px;
 }
-.layout { overflow: hidden; }
-.comm_date {float: left; width: 100px; }
-.comm_user { float: left; width: 200px; }
-.comm_text {margin-left: 300px;
-
-    /* Разделитель слева */
-    padding: 15px;
-    border-left: 1px solid #DDD;
-
-} /* Отступ слева на ширину колонок 1 и 2 */
